--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { "name": "system"
-, "version": "0.0.2"
+, "version": "0.0.3"
 , "description": "CommonJS System/1.0 for nodejs"
 , "homepage": "http://wiki.commonjs.org/wiki/System"
 , "keywords": ["node", "commonjs", "system"]
@@ -11,9 +11,17 @@
   }
 , "bugs": { "web": "http://github.com/Gozala/system-commonjs/issues/" }
 , "dependencies": { "test": ">=0.0.5" }
-, "main": "./system.js"
-, "engines": { "node": ">=0.1.103" }
-, "licenses": [
-    { "type": "MIT" }
+, "engines":
+  { "node": ">=0.1.103"
+  , "teleport": ">=0.2.0"
+  }
+, "overlay":
+  { "node": { "main": "engines/node/system" }
+  , "teleport": { "main": "engines/teleport/system" }
+  }
+, "licenses" :
+  [ { "type" : "MPL 1.1/LGPL 2.1/GPL 2.0"
+    , "url" : "http://www.mozilla.org/MPL/"
+    }
   ]
 }
